--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router": "^6.4.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "swiper": "^8.4.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
